# BilDI

./: README.md  pyproject.toml
src/bildi/: container.py
src/bildi/dtos/: member.py  registration.py
src/bildi/helpers/: validate_signature.py
