[tool.poetry]
name = "bildi"
version = "0.1.0"
description = ""
authors = ["Sergey Bilibin <s.bilibin2017@yandex.ru>"]
readme = "README.md"
packages = [{include = "bildi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
